--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ env:
     - SITE_PROFILE="TRAVIS"
     - PATH="${PATH}:${HOME}/bin"
   matrix:
-    - CONTEXT=install MODULE=-
+    - CONTEXT=installer MODULE=-
     - CONTEXT=execute MODULE=net   #. nima/site#7
     - CONTEXT=execute MODULE=hgd   #. nima/site#3
     - CONTEXT=execute MODULE=gpg   #. nima/site#5
